tests/core/snapshots/test-union-fieldtype.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Bar {
  bar: String!
}

type Foo {
  foo: String!
}

union FooBar = Bar | Foo

type Nested {
  bar: FooBar
  foo: FooBar
}

type Query {
  arr: [FooBar]
  bar: FooBar
  foo: FooBar
  nested: Nested
  unknown: FooBar
}

schema {
  query: Query
}
