tests/core/snapshots/test-union-many-types.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Union AllTypes defines more than 64 types that is not supported",
    "trace": [
      "Query",
      "allTypes"
    ],
    "description": null
  }
]
