tests/core/snapshots/test-union-optional.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "nodes": [
        {
          "__typename": "User",
          "id": 1,
          "username": "user"
        },
        null,
        {
          "__typename": "Page",
          "id": 2,
          "slug": "page"
        }
      ]
    }
  }
}
