tests/core/snapshots/test-union-optional.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
union Node = Page | User

type Page {
  id: ID!
  slug: String!
}

type Query {
  node: Node
  nodes: [Node]!
}

type User {
  id: ID!
  username: String!
}

schema {
  query: Query
}
