tests/core/snapshots/test-union-optional.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

union Node = Page | User

type Page {
  id: ID!
  slug: String!
}

type Query {
  nodes: Node @expr
}

type User {
  id: ID!
  username: String!
}
