tests/core/snapshots/test-union-same-types.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Union have equal types: Bar == Foo ",
    "trace": [
      "Query",
      "fooBarBaz",
      "FooBarBaz"
    ],
    "description": null
  }
]
