tests/core/snapshots/test-union.md_1.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "bar": {
        "bar": "test-bar"
      }
    }
  }
}
