tests/core/snapshots/test-union.md_2.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "nested": {
        "foo": {
          "foo": "nested-foo"
        },
        "bar": {
          "bar": "nested-bar"
        }
      }
    }
  }
}
